// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`to display sending... when message is still in optimistic state 1`] = `
<div
  data-message-id="messageThread12_1"
  data-stylename="message messageHeader"
>
  <div
    data-stylename="avatar"
  >
    <Avatar
      avatarUrl="http://avatar.com/i.png"
      url="/all/members/1"
    />
  </div>
  <div
    data-stylename="content"
  >
    <div>
      <span
        data-stylename="name"
      >
        Good Person
      </span>
      <span
        data-stylename="date"
      >
        sending...
      </span>
    </div>
    <div
      data-stylename="text"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "sending...",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`to match the latest non-header snapshot 1`] = `
<div
  data-message-id="1"
  data-stylename="message"
>
  <div
    data-stylename="avatar"
  />
  <div
    data-stylename="content"
  >
    <div
      data-stylename="text"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "test",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`to match the latest snapshot 1`] = `
<div
  data-message-id="1"
  data-stylename="message messageHeader"
>
  <div
    data-stylename="avatar"
  >
    <Avatar
      avatarUrl="http://avatar.com/i.png"
      url="/all/members/1"
    />
  </div>
  <div
    data-stylename="content"
  >
    <div>
      <span
        data-stylename="name"
      >
        Good Person
      </span>
      <span
        data-stylename="date"
      />
    </div>
    <div
      data-stylename="text"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "test",
          }
        }
      />
    </div>
  </div>
</div>
`;
